-- To be squashed -- GLIB -- Meet timings with 2 OHs (clean reset TODO)

--- a/glib/constraints/user/user_floorplanning.ucf
+++ b/glib/constraints/user/user_floorplanning.ucf
@@ -4,15 +4,16 @@
 #######################################
 #######################################
 
-INST "usr"                             AREA_GROUP = "pblock_usr";
-AREA_GROUP "pblock_usr"                     RANGE=CLOCKREGION_X1Y4:CLOCKREGION_X1Y4,
-                                                            CLOCKREGION_X1Y3:CLOCKREGION_X1Y3,
-                                                            CLOCKREGION_X1Y1:CLOCKREGION_X1Y1,
-                                                            CLOCKREGION_X1Y0:CLOCKREGION_X1Y0,
-                                                            CLOCKREGION_X0Y4:CLOCKREGION_X0Y4,
-                                                            CLOCKREGION_X0Y3:CLOCKREGION_X0Y3,
-                                                           CLOCKREGION_X0Y2:CLOCKREGION_X0Y2,
-                                                            CLOCKREGION_X0Y1:CLOCKREGION_X0Y1,
-                                                            CLOCKREGION_X0Y0:CLOCKREGION_X0Y0;
-
-
+#INST "usr"               AREA_GROUP = "pblock_usr";
+#AREA_GROUP "pblock_usr"  RANGE=CLOCKREGION_X1Y4:CLOCKREGION_X1Y4,
+#                               CLOCKREGION_X1Y3:CLOCKREGION_X1Y3,
+#                               CLOCKREGION_X1Y1:CLOCKREGION_X1Y1,
+#                               CLOCKREGION_X1Y0:CLOCKREGION_X1Y0,
+#                               CLOCKREGION_X0Y4:CLOCKREGION_X0Y4,
+#                               CLOCKREGION_X0Y3:CLOCKREGION_X0Y3,
+#                               CLOCKREGION_X0Y2:CLOCKREGION_X0Y2,
+#                               CLOCKREGION_X0Y1:CLOCKREGION_X0Y1,
+#                               CLOCKREGION_X0Y0:CLOCKREGION_X0Y0;
+#
+#INST "usr/i_gem_amc/*i_gbt" AREA_GROUP = "pblock_gbt";
+#AREA_GROUP "pblock_gbt"     RANGE=CLOCKREGION_X0Y0:CLOCKREGION_X1Y1;
